[package]
name = "st7735-lcd"
description = "ST7735 TFT LCD driver with embedded-graphics support"
version = "0.8.1"
authors = ["Paul Sajna <sajattack@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/sajattack/st7735-lcd-rs"
readme = "README.md"
documentation = "https://docs.rs/st7735-lcd"

[dependencies]
embedded-hal = "0.2"
nb = "0.1"

[dependencies.embedded-graphics]
version = "0.7"
optional = true

[features]
default = ["graphics"]
graphics = ["embedded-graphics"]
