[package]
name = "st7306"
description = "ST7306 TFT LCD driver with embedded-graphics support"
version = "0.8.2"
authors = ["Daniel Schaefer <dhs@frame.work>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/FrameworkComputer/st7306-rs"
homepage = "https://github.com/FrameworkComputer/st7306-rs"
readme = "README.md"
documentation = "https://docs.rs/st7306"
keywords = ["st7306", "display", "embedded-graphics", "no-std"]
categories = ["no-std", "no-std::no-alloc", "embedded"]

[dependencies]
embedded-hal = "0.2"
nb = "1.0"

[dependencies.embedded-graphics]
version = "0.8"
optional = true

[features]
default = ["graphics"]
graphics = ["embedded-graphics"]
